<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>tv.twelvetone.exist</groupId>
	<artifactId>tv.twelvetone.exist.osgi</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>bundle</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
		    <!-- Remove this if you do not need and OBR index in your maven repository -->
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-obr-plugin</artifactId>
				<version>1.2.0</version>
				<executions>
					<execution>
						<goals>
							<goal>install</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<!-- <compilerArguments>
						<endorseddirs>src/test/resources/exist-endorsed</endorseddirs>
					</compilerArguments> -->
				</configuration>
			</plugin>
			<!-- <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
					<argLine>-Djava.endorsed.dirs=exist-endorsed</argLine>
				</configuration>
			</plugin> -->

			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>2.5.4</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<DynamicImport-Package>org.w3c.*,org.xml.*,javax.xml.*,javax.management,javax.management.*,javax.naming,javax.naming.*</DynamicImport-Package>
						<Embed-Dependency>*;scope=system|compile</Embed-Dependency>
						<Import-Package>org.osgi.framework;version=1.5.0</Import-Package>
						<Export-Package>org.xmldb.api.*,org.exist.xmldb.*,tv.twelvetone.exist.osgi.api</Export-Package>
						<Bundle-Activator>tv.twelvetone.exist.osgi.internal.Activator</Bundle-Activator>
					</instructions>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.core</artifactId>
			<version>6.0.0</version>
			<scope>provided</scope>
		</dependency>

        <!-- You may want to exclude this and rely on dynamic-import instead.
            eXist needs org.w3c.dom.ElementTraversal and that only lives in 1.4.01. 
            If other bundles use org.w3c classes generated from this bundle, cast issues may arise.
         -->
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>xml-apis-1.4.01</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-endorsed/xml-apis-1.4.01.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-endorsed/xercesImpl-2.11.0.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>xml-resolver</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-endorsed/xml-resolver-1.2.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>xalan</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-endorsed/xalan-2.7.1.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>serializer</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-endorsed/serializer-2.7.1.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>saxonhe</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-endorsed/saxonhe-9.4.0.7.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>exist</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/exist.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>xmldb</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/xmldb.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>commons-collections</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/commons-collections-3.2.1.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>commons-logging</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/commons-logging-1.1.1.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>commons-pool</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/commons-pool-1.6.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>commons-codec</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/commons-codec-1.7.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/commons-lang3-3.1.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>commons-io</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/commons-io-2.4.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/commons-httpclient-3.1.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>commons-compress</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/commons-compress-1.4.1.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>start</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/start.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>exquery-common</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/exquery-common-1.0-SNAPSHOT.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>exquery-restxq-api</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/exquery-restxq-api-1.0-SNAPSHOT.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>exist-exquery-request-module</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/exist-exquery-request-module.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>exquery-exquery</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/exquery-xquery-1.0-SNAPSHOT.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>exquery-exquery3</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/exquery-xquery3-1.0-SNAPSHOT.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>exist-restxq</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/exist-restxq.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>andlr</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/antlr-2.7.7.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>exist-versioning</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/exist-versioning.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>sunxacml</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/sunxacml-1.2.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>pkg-repo</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/pkg-repo.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>quartz</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/quartz-2.1.6.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>log4</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/log4j-1.2.17.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/slf4j-api-1.7.2.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/slf4j-log4j12-1.7.2.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>jta</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/jta-1.1.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>exist-modules</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/exist-modules.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>gnu-crypto-min</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/gnu-crypto-2.0.1-min.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>xmlrpc-client</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/xmlrpc-client-3.1.3.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>xmlrpc-common</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/xmlrpc-common-3.1.3.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>xmlrpc-server</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/xmlrpc-server-3.1.3.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>exist-index-lucene</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/exist-index-lucene.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>exist-index-ngram</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/exist-index-ngram.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>exist-index-range</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/exist-index-range.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>exist-index-sort</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/exist-index-sort.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>lucene-core</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/lucene-core-4.4.0.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>lucene-queries</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/lucene-queries-4.4.0.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>lucene-facet</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/lucene-facet-4.4.0.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>lucene-queryparser</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/lucene-queryparser-4.4.0.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>tv.twelvetone.system</groupId>
			<artifactId>lucene-analyzers-common</artifactId>
			<version>0.0.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/exist-lib/lucene-analyzers-common-4.4.0.jar</systemPath>
		</dependency>
	</dependencies>
</project>